--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compiler-my-sfc",
+  "name": "car-man",
   "version": "1.0.0",
   "description": "",
   "main": "dist/runtime.js",
@@ -17,9 +17,6 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/register": "^7.22.5",
     "@babel/traverse": "^7.22.8",
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
     "csso": "^5.0.5",
     "jest": "^29.6.2",
     "less": "^4.2.0",
