--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/register": "^7.22.5",
     "@babel/traverse": "^7.22.8",
+    "@babel/types": "^7.22.10",
     "csso": "^5.0.5",
     "jest": "^29.6.2",
     "less": "^4.2.0",
-    "lodash": "^4.17.21",
     "parse5": "^7.1.2",
     "rollup": "^3.27.2",
     "rollup-pluginutils": "^2.8.2"
   },
   "dependencies": {
-    "@vue/reactivity": "^3.3.4"
+    "@vue/reactivity": "^3.3.4",
+    "lodash": "^4.17.21"
   }
 }
