增加给自定义组件增加样式的能力

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "dependencies": {
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "@vue/reactivity": "^3.3.4",
-    "lodash": "^4.17.21"
+    "@vue/reactivity": "^3.3.4"
   }
 }
